# openchange

./: .bzrignore  .gitignore  .svnignore  .travis.yml  CHANGES.md  CHANGES.rst  ChangeLog  Doxyfile.in  IDL_LICENSE.txt  Mainpage.doxy  Makefile  Makefile.in  README  README.md  README.smbconf  README.smbconf.md  VERSION  asyncemsmdb.idl  autogen.sh  build_oc_zentyal.txt  config.h  config.h.in  config.m4  config.mk.in  configure  configure.ac  constant.php  example.php  exchange.idl  exchange_debug.idl  general.php  hello.c  idl_types.h  libmapi++.pc.in  libmapi.pc.in  libmapiadmin.pc.in  libocpf.pc.in  mailbox.php  mapi.c  mapi_appointment.c  (+39 more)
buildtools/: update-waf.sh  waf
debian/: build-orig.sh  changelog  control  rules
doc/: howto.txt  smb.conf.example
examples/: appointment.php  appointment_recurrence.php  constant.php  create-get-profile.php  folder-table.php  general.php  mailbox.php  message.php  new_message.php  simple-hierarchy.php  table.php
ldif/: AD_schema_kerihu_j_exchange  AD_schema_nspiusertest  AD_schema_nspiusertest_exchange
libexchange2ical/: exchange2ical.c  exchange2ical.h  exchange2ical_component.c  exchange2ical_property.c  exchange2ical_utils.c  ical2exchange.c  ical2exchange_property.c  libexchange2ical.c  libexchange2ical.h  libical2exchange.c  todo  wscript
libmapi/: Doxyfile.in  FXICS.c  IABContainer.c  IMAPIContainer.c  IMAPIFolder.c  IMAPIProp.c  IMAPISession.c  IMAPISession.idl  IMAPISupport.c  IMAPITable.c  IMSProvider.c  IMessage.c  IMsgStore.c  IProfAdmin.c  IStoreFolder.c  IStream.c  IUnknown.c  IXPLogon.c  Makefile  async_emsmdb.c  cdo_mapi.c  container.c  defs_private.h  emsmdb.c  emsmdb.h  freebusy.c  fxics.h  fxparser.c  fxparser.h  idset.c  idset.h  libmapi.h  libmapi_private.h  lzfu.c  mapi.c  mapi.h  mapi.idl  mapi_context.h  mapi_ctx.h  mapi_handles.c  (+31 more)
libmapi++/: Doxyfile.in  attachment.h  clibmapi.h  folder.h  libmapi++-example.doxy  libmapi++-mainpage.doxy  libmapi++.h  mapi_exception.h  message.h  message_store.h  object.h  profile.h  property_container.h  session.h  wscript
libmapiadmin/: Doxyfile.in  libmapiadmin-mainpage.doxy  libmapiadmin.h  mapiadmin.c  mapiadmin_user.c  wscript
libocpf/: Doxyfile.in  configure  lex.h  lex.l  ocpf-documentation.doxy  ocpf.h  ocpf.y  ocpf_api.c  ocpf_api.h  ocpf_bison.supp  ocpf_context.c  ocpf_dump.c  ocpf_dump.h  ocpf_private.h  ocpf_public.c  ocpf_server.c  ocpf_write.c  pyocpf.c  pyocpf.h  wscript
mapiproxy/: Doxyfile.in  dcesrv_mapiproxy.c  dcesrv_mapiproxy.h  dcesrv_mapiproxy_module.c  dcesrv_mapiproxy_nspi.c  dcesrv_mapiproxy_proto.h  dcesrv_mapiproxy_rfr.c  dcesrv_mapiproxy_server.c  dcesrv_mapiproxy_session.c  dcesrv_mapiproxy_unused.c  libmapiproxy.h  libmapiproxy.pc.in  libmapiserver.pc.in  libmapistore.pc.in  wscript
mapiproxy/services/plugins/dovecot/: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  ocsmanager-plugin.c  ocsmanager-plugin.h  openchange-plugin.c
php/: .gitignore  Changelog  config.m4  mapi.c  mapi_appointment.c  mapi_appointment.h  mapi_attachment.c  mapi_attachment.h  mapi_attachment_table.c  mapi_attachment_table.h  mapi_contact.c  mapi_contact.h  mapi_exception.c  mapi_exception.h  mapi_folder.c  mapi_folder.h  mapi_folder_table.c  mapi_folder_table.h  mapi_mailbox.c  mapi_mailbox.h  mapi_message.c  mapi_message.h  mapi_message_table.c  mapi_message_table.h  mapi_profile.c  mapi_profile.h  mapi_profile_db.c  mapi_profile_db.h  mapi_session.c  mapi_session.h  mapi_table.c  mapi_table.h  mapi_task.c  mapi_task.h  php_mapi.h  php_mapi_constants.c
php5-openchange/: config.m4  mapi.c  mapi_folder.c  mapi_mailbox.c  mapi_message.c  mapi_message_table.c  mapi_message_table.h  php_mapi.h
providers/: emsabp.c  emsabp.h
pymapi/: msg_store.c  object.c  pymapi.c  pymapi.h  session.c
pyopenchange/: pymapi.c  pymapi.h  pymapi_properties.c  pymapistore.c  pymapistore.h  pymapistore_folder.c  pymapistore_mgmt.c  pymapistore_mgmt.h  pymapistore_module.c  pymapistore_object.c  pymapistoredb.c  pyocpf.c
script/: check_oc.py  debugoc.py  fxdump.py  gdb_pktdump.py  installman.sh  installoc.sh  installsamba4.sh  makepropslist.py  mapi_object_init.prop  migration_fix.py  mkproto.pl  mkrelease.sh  mkversion.sh  oc_timer_stats  openchange_user_cleanup.py  samba4_ver.sh  smoketest.sh  sogo_indexing.py  uninstallman.sh  uno.dfn  wipeuser.py
server/: dcesrv_exchange.c  dcesrv_exchange.h  dcesrv_exchange_remote.c
setup/: libmapi_setup.pl  oc_newuser  oc_profiles  oc_profiles_basedn.ldif  oc_provision  oc_provision.ldif  oc_provision_configuration.ldif  oc_provision_containers.ldif  oc_provision_init.ldif  oc_provision_schema.ldif  oc_provision_schema_modify.ldif  openchange_group  openchange_migrate  openchange_neworganization  openchange_newuser  openchange_provision  prefixMap.txt
test/: .gitignore  CMakeLists.txt  README  README.md  openchange_test_suite.c  test_common.c  test_common.h
test/resources/: from_ldif_to_sql.py  openchangedb_multitenancy_sample.sql  openchangedb_sample.ldif  openchangedb_sample.sql
test/test_suites/: indexing.c  namedprops_backends.h  namedprops_ldb.c  namedprops_mysql.c
test/test_suites/libmapi/: property.c  test_property.h
test/test_suites/libmapiproxy/: openchangedb.c  openchangedb.h  openchangedb_backends.h  openchangedb_ldb.c  openchangedb_multitenancy.c  openchangedb_mysql.c
test/test_suites/libmapistore/: indexing.c  indexing.h  namedprops_backends.h  namedprops_ldb.c  namedprops_mysql.c  namedprops_mysql.h
testprogs/: check_fasttransfer.c  check_mbox.py  fetch-nameid.c  globset.py  list-folders.c  mapistore_tool.c  parse-getprops.py  parse-syncbuffer.py  parse-uploadstream.py  syncstream-compare.py  test_asyncnotif.c
testsuite/: README.md  testsuite.c  testsuite.h  testsuite_common.c  testsuite_common.h
torture/: emsmdb.c  exchange.c  exchange_createuser.c  fuzzer_msgstore.c  mapi_bookmark.c  mapi_common.c  mapi_copymail.c  mapi_createuser.c  mapi_criteria.c  mapi_deletemail.c  mapi_fetchappointment.c  mapi_fetchattach.c  mapi_fetchcontacts.c  mapi_fetchmail.c  mapi_folder.c  (+24 more)
(+730 files in other folders)
